force-app/main/default/objects/Time_Slot__c/Time_Slot__c.object-meta.xml
<CustomObject>
    <label>Time Slot</label>
    <nameField>
        <displayFormat>SLOT-{00000}</displayFormat>
        <label>Slot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>