force-app/main/default/objects/Time_Slot__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>