force-app/main/default/objects/Time_Slot__c/fields/Linked_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Linked_Appointment__c</fullName>
    <label>Linked Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Time Slots</relationshipLabel>
    <relationshipName>Time_Slots</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>