force-app/main/default/objects/Time_Slot__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Time Slots</relationshipLabel>
    <relationshipName>Time_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>