force-app/main/default/objects/Time_Slot__c/fields/Slot_Type__c.field-meta.xml
<CustomField>
    <fullName>Slot_Type__c</fullName>
    <label>Slot Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Regular</fullName><default>true</default><label>Regular</label></value>
            <value><fullName>Emergency</fullName><default>false</default><label>Emergency</label></value>
            <value><fullName>Walk-in</fullName><default>false</default><label>Walk-in</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>