force-app/main/default/objects/Time_Slot__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>